--- a/Security+/Attacks, Threats, and Vulnerabilities/1.1a - Phishing.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.1a - Phishing.md
@@ -11,29 +11,29 @@
 	- Pretexting
 		- Lying to get information
 		- Creates a situation they control the details of in attempt to trick you
-- Pharming
+- # Pharming
 	- Phishing but sent to a larger group of individuals instead of a specific person (spearfishing)
 	- An example of pharming is directing a legit website to a bogus one. This is done by poisoning DNS server or client vulnerabilities
 	- Combine pharming with phising
 		- Pharming - harvest large groups of people
 		- Phishing - collect access credentials
 	- Difficult for anti-malware software to stop, since everything seems legitimate to the user
-- Types of Phishing techniques
-	- Vishing
+- # Types of Phishing techniques
+	- ## Vishing
 		- Voice phising
 		- Done over the phone, spoofing the caller ID
 		- Fake security checks, bank updates etc
 		- Leads to you giving up personal information
-	- Smsishing (SMS Phishing)
+	- ## Smsishing (SMS Phishing)
 		- Spoofing is a problem here as well, spoofing the  number
 		- Try to get you to click a link in the text
-- Finding the best spot to phish
-	- Reconnaissance
+	- ## Spear phishing
+		- is a targeted phishing attack, usually involves having inside information in order to make it more believable
+		- Whaling is when the spear phishing attack targets a CEO, or other "large catch"
+- # Finding the best spot to phish
+	- ## Reconnaissance
 		- Gather information on the victim
 		- Background information can be gathered from open source tools. Can gather information on individuals and corporations
 		- Can use sites like Linkedin, Twitter, Facebook, Instagram or the corporate website
 		- This allows the attacker to build a convincing pretext
 			- Where you work, bank, recent financial transactions, friends and family, etc
-- Spear phishing
-	- is a targeted phishing attack, usually involves having inside information in order to make it more believable
-	- Whaling is when the spear phishing attack targets a CEO, or other "large catch"
