Fix image paths

--- a/Security+/Attacks, Threats, and Vulnerabilities/1.1h - Influence Campaigns.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.1h - Influence Campaigns.md
@@ -4,7 +4,7 @@
 - Advertising is an option, buying a voice
 - Enabled through social media
 	- Using bots, etc for amplification
-- ![](/assets/Pasted%20image%2020240208174012.png)
+- ![](../../assets/Pasted%20image%2020240208174012.png)
 - Starting from one fake user and amplifying to real users discussing it
 - Hybrid wareface
 	- Non traditional way to wage war
