--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2b - Viruses and Worms.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2b - Viruses and Worms.md
@@ -13,7 +13,7 @@
 	- ## Fileless Virus
 		- A stealth attack, avoid AV detection well
 		- Operates in memory
-	- ![](/assets/Pasted%20image%2020240209144104.png)
+	- ![](../../assets/Pasted%20image%2020240209144104.png)
 
 - # Worms
 	- Malware that is self-replicating
@@ -21,4 +21,4 @@
 		- Uses the network as a transmission medium
 		- Self-propagates and spreads quickly
 	- Firewalls and IDS/IPS can mitigate many worm infestations, doesn't help if the worm manages to get inside the network
-	- ![](/assets/Pasted%20image%2020240209152451.png)
+	- ![](../../assets/Pasted%20image%2020240209152451.png)
