--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2b - Viruses and Worms.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2b - Viruses and Worms.md
@@ -1,4 +1,4 @@
-- # Virus
+# Virus
 	- Malware that can reproduce itself
 	- Needs someone to execute a program
 	- Reproduces through file systems or the network. Just running a program can spread a virus
@@ -15,7 +15,7 @@
 		- Operates in memory
 	- ![](../../assets/Pasted%20image%2020240209144104.png)
 
-- # Worms
+# Worms
 	- Malware that is self-replicating
 		- Don't need to do anything
 		- Uses the network as a transmission medium
