Revert "Fix formatting"
This reverts commit 276423de6af1f57d38f1e0b01e500b207d5d9c48.

--- a/Security+/Attacks, Threats, and Vulnerabilities/1.1i - Other Social Engineering Attacks.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.1i - Other Social Engineering Attacks.md
@@ -1,4 +1,4 @@
-# Tailgating
+- ## Tailgating
 	- Using an authorized person to gain unauthorized access to a building
 	- Following them through the door.
 	- Watching for tailgating
@@ -11,13 +11,13 @@
 		- Using a vendors clothing
 		- Blending in, look like you belong
 		- Bringing donuts, etc
-# Invoice Scams
+- ## Invoice Scams
 	- starts with a bit of spear phishing - who pays the bills and what bills
 	- Attacker sends a fake invoice - domain renewal, etc
 		- From: address is a spoofed version of the CEO
 	- Accounting pays the invoice since it was from the CEO
 	- Might include a link to pay, now the attacker has payment details
-# Credential Harvesting
+- ## Credential Harvesting
 	- aka password harvesting
 	- Attackers collect login credentials
 	- Stealing stored credentials on the computer. Chrome, Outlook, Credential Managers
