--- a/Security+/Attacks, Threats, and Vulnerabilities/1.1j - Principles of Social Engineering.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.1j - Principles of Social Engineering.md
@@ -1,26 +1,26 @@
-# Effective social engineering
+- # Effective social engineering
 	- Constantly changing, never know what trick they will use next
 	- May involve multiple people
 	- May happen in person or electronically
 	- Automate tools for open source intelligence, helping with gathering the information
-# Social engineering principles
-## Authority
-	- The social engineer acts like they are in charge, and coming from a place of authority. Office of the CEO, Police, etc
-## Intimidation
-	-Something bad will happen if you don't help.
+- # Social engineering principles
+	- ## Authority
+		- The social engineer acts like they are in charge, and coming from a place of authority. Office of the CEO, Police, etc
+	- ## Intimidation
+		- Something bad will happen if you don't help.
 		- Pay won't be processed, etc
-## Consensus / Social proof
-	- Convinced based on what's normally expected
-	- So and So helped me last week
-## Scarcity
-	- The situation will not be this way for long
-	- Must make a change before time runs out
-## Urgency
-	- Act quickly, don't think
-	- This must be done right away
-	- Works alongside scarcity
-## Familiarity / Liking
-	- Someone you know, we have common friends, etc
-## Trust
-	- Someone who is perceived safe.
-	- “I'm from IT”
+	- ## Consensus / Social proof
+		- Convinced based on what's normally expected
+		- So and So helped me last week
+	- ## Scarcity
+		- The situation will not be this way for long
+		- Must make a change before time runs out
+	- ## Urgency
+		- Act quickly, don't think
+		- This must be done right away
+		- Works alongside scarcity
+	- ## Familiarity / Liking
+		- Someone you know, we have common friends, etc
+	- ## Trust
+		- Someone who is perceived safe.
+		- “I'm from IT”
