--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2d - Trojans and RATs.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2d - Trojans and RATs.md
@@ -1,23 +1,23 @@
-## Trojan Horse
+- ## Trojan Horse
 	- Software that pretends to be something else
 	- Circumvents your existing security
 		- Anti-virus may catch it when it runs
 		- Better trojans are made to avoid and disable AV
 	- Once inside it has free reign and may open the gates for other programs
-## Potentially Unwanted Program (PUP)
+- ## Potentially Unwanted Program (PUP)
 	- Identified by anti-virus/anti-malware
 	- Often installed along with other software
 	- Overly aggressive browser toolbar
 	- A backup utility that displays adds
 	- Browser search engine hijacker
-## Backdoors
+- ## Backdoors
 	- A way around normal authentication methods
 	- Direct access into a computer
 	- Often placed on your computer through malware
 	- Some software includes a backdoor
 		- left behind by developers when testing
 		- On purpose, state requirements, etc
-## Remote Access Trojans (RATs)
+- ## Remote Access Trojans (RATs)
 	- Remote administration tool
 	- Malware installs the server/service/host and attacker connects with client software
 	- Control the device remotely
@@ -25,7 +25,7 @@
 		- Screen recording / screenshots
 		- Copy files
 		- Embed more malware
-## Protecting against Trojans and RATs
+- ## Protecting against Trojans and RATs
 	- Don't run unknown software
 	- Keep AV/Anti-malware signatures up to date
 	- Always have a backup
