--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2e - Rootkits.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2e - Rootkits.md
@@ -1,11 +1,11 @@
 - Modifies core system files
 - Can be invisible to the operating systems
 - Also invisible to traditional anti-virus utilities
-## Kernel Drivers
+- ## Kernel Drivers
 	- Zeus/Zbot malware
 	- Necurs rootkit
 	- Unable to remove the rootkit/associated software with traditional methods
-## Finding and removing rootkits
+- ## Finding and removing rootkits
 	- Look for the unusual
 	- Anti-malware scans
 	- Use a remover specific to the root kit
