--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2b - Viruses and Worms.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2b - Viruses and Worms.md
@@ -1,16 +1,16 @@
-- # Virus
+- ## Virus
 	- Malware that can reproduce itself
 	- Needs someone to execute a program
 	- Reproduces through file systems or the network. Just running a program can spread a virus
 	- Some are annoying, some may be invisible
 	- Anti-virus is a good way to prevent known viruses on your system.
 		- Ensure signature file is updated
-	- ## Virus Types
+	- ### Virus Types
 		- Program Viruses - part of an application
 		- Boot sector viruses
 		- Script viruses
 		- Macro viruses - common in Microsoft office
-	- ## Fileless Virus
+	- ### Fileless Virus
 		- A stealth attack, avoid AV detection well
 		- Operates in memory
 	- ![](../../assets/Pasted%20image%2020240209144104.png)
