--- a/Security+/Attacks, Threats, and Vulnerabilities/1.1a - Phishing.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.1a - Phishing.md
@@ -1,5 +1,5 @@
 - Social engineering with a touch of spoofing
-	- Often delivered by email, text, etc
+- Often delivered by email, text, etc
 - Emails pretending to be some that they aren't.
 - Trying to get you to click a link to gather information for you
 - Can't make the address bar look exactly like the original URL. Good indicator to see if it is a phish
@@ -11,29 +11,42 @@
 	- Pretexting
 		- Lying to get information
 		- Creates a situation they control the details of in attempt to trick you
-# Pharming
+- ## Pharming
 	- Phishing but sent to a larger group of individuals instead of a specific person (spearfishing)
 	- An example of pharming is directing a legit website to a bogus one. This is done by poisoning DNS server or client vulnerabilities
 	- Combine pharming with phising
 		- Pharming - harvest large groups of people
 		- Phishing - collect access credentials
 	- Difficult for anti-malware software to stop, since everything seems legitimate to the user
-# Types of Phishing techniques
-	- ## Vishing
+- ## Types of Phishing techniques
+	- ### Vishing
 		- Voice phising
 		- Done over the phone, spoofing the caller ID
 		- Fake security checks, bank updates etc
 		- Leads to you giving up personal information
-	- ## Smsishing (SMS Phishing)
+	- ### Smsishing (SMS Phishing)
 		- Spoofing is a problem here as well, spoofing the  number
 		- Try to get you to click a link in the text
-	- ## Spear phishing
+	- ### Spear phishing
 		- is a targeted phishing attack, usually involves having inside information in order to make it more believable
 		- Whaling is when the spear phishing attack targets a CEO, or other "large catch"
-# Finding the best spot to phish
-	## Reconnaissance
+- ## Finding the best spot to phish
+	- ### Reconnaissance
 		- Gather information on the victim
 		- Background information can be gathered from open source tools. Can gather information on individuals and corporations
 		- Can use sites like Linkedin, Twitter, Facebook, Instagram or the corporate website
 		- This allows the attacker to build a convincing pretext
 			- Where you work, bank, recent financial transactions, friends and family, etc
+
+# Related Topics
+- Attacks, Threats and Vulnerabilities - 1.1
+	-  [1.1a - Phishing](1.1a%20-%20Phishing.md) 
+	-  [1.1b - Impersonation](1.1b%20-%20Impersonation.md) 
+	-  [1.1c - Dumpster Diving](1.1c%20-%20Dumpster%20Diving.md)
+	-  [1.1d - Shoulder Surfing](1.1d%20-%20Shoulder%20Surfing.md)
+	- [1.1e - Hoaxes](1.1e%20-%20Hoaxes.md)
+	- [1.1f - Watering Hole Attacks](1.1f%20-%20Watering%20Hole%20Attacks.md)
+	- [1.1g - Spam](1.1g%20-%20Spam.md)
+	- [1.1h - Influence Campaigns](1.1h%20-%20Influence%20Campaigns.md)
+	- [1.1i - Other Social Engineering Attacks](1.1i%20-%20Other%20Social%20Engineering%20Attacks.md)
+	- [1.1j - Principles of Social Engineering](1.1j%20-%20Principles%20of%20Social%20Engineering.md)
