--- a/Security+/Attacks, Threats, and Vulnerabilities/1.1j - Principles of Social Engineering.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.1j - Principles of Social Engineering.md
@@ -1,26 +1,39 @@
-- # Effective social engineering
+- ## Effective social engineering
 	- Constantly changing, never know what trick they will use next
 	- May involve multiple people
 	- May happen in person or electronically
 	- Automate tools for open source intelligence, helping with gathering the information
-- # Social engineering principles
-	- ## Authority
+- ## Social engineering principles
+	- ### Authority
 		- The social engineer acts like they are in charge, and coming from a place of authority. Office of the CEO, Police, etc
-	- ## Intimidation
+	- ### Intimidation
 		- Something bad will happen if you don't help.
 		- Pay won't be processed, etc
-	- ## Consensus / Social proof
+	- ### Consensus / Social proof
 		- Convinced based on what's normally expected
 		- So and So helped me last week
-	- ## Scarcity
+	- ### Scarcity
 		- The situation will not be this way for long
 		- Must make a change before time runs out
-	- ## Urgency
+	- ### Urgency
 		- Act quickly, don't think
 		- This must be done right away
 		- Works alongside scarcity
-	- ## Familiarity / Liking
+	- ### Familiarity / Liking
 		- Someone you know, we have common friends, etc
-	- ## Trust
+	- ### Trust
 		- Someone who is perceived safe.
 		- “I'm from IT”
+
+# Related Topics
+- Attacks, Threats and Vulnerabilities - 1.1
+	-  [1.1a - Phishing](1.1a%20-%20Phishing.md) 
+	-  [1.1b - Impersonation](1.1b%20-%20Impersonation.md) 
+	-  [1.1c - Dumpster Diving](1.1c%20-%20Dumpster%20Diving.md)
+	-  [1.1d - Shoulder Surfing](1.1d%20-%20Shoulder%20Surfing.md)
+	- [1.1e - Hoaxes](1.1e%20-%20Hoaxes.md)
+	- [1.1f - Watering Hole Attacks](1.1f%20-%20Watering%20Hole%20Attacks.md)
+	- [1.1g - Spam](1.1g%20-%20Spam.md)
+	- [1.1h - Influence Campaigns](1.1h%20-%20Influence%20Campaigns.md)
+	- [1.1i - Other Social Engineering Attacks](1.1i%20-%20Other%20Social%20Engineering%20Attacks.md)
+	- [1.1j - Principles of Social Engineering](1.1j%20-%20Principles%20of%20Social%20Engineering.md)
