--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2f - Spyware.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2f - Spyware.md
@@ -17,3 +17,17 @@
 	- Always know what you are installing
 		- be cautious of just clicking next quickly, look at the options
 	- Backups
+
+# Related Topics
+- [1.2a - Overview of Malware](1.2a-Overview-of-Malware.md)
+- [1.2b - Viruses and Worms](1.2b-Viruses-and-Worms.md)
+- [1.2c - Ransomware and Crypto-malware](1.2c-Ransomware-and-Crypto-malware.md)
+- [1.2d - Trojans and RATs](1.2d-Trojans-and-RATs.md)
+- [1.2e - Rootkits](1.2e-Rootkits.md)
+- [1.2g - Bots and Botnets](1.2g-Bots-and-Botnets.md)
+- [1.2h - Logic Bombs](1.2h-Logic-Bombs.md)
+- [1.2i - Password Attacks](1.2i-Password-Attacks.md)
+- [1.2j - Physical Attacks](1.2j-Physical-Attacks.md)
+- [1.2k - Adversarial Artificial Intelligence](1.2k-Adversarial-Artificial-Intelligence.md)
+- [1.2l - Supply Chain Attacks](1.2l-Supply-Chain-Attacks.md)
+- [1.2m - Cryptographic Attacks](1.2m-Cryptographic-Attacks.md)
