--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2h - Logic Bombs.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2h - Logic Bombs.md
@@ -12,3 +12,17 @@
 		- Alert on changes
 		- HIDS, tripware, etc
 	- Constant auditing
+
+# Related Topics
+- [1.2a - Overview of Malware](1.2a-Overview-of-Malware.md)
+- [1.2b - Viruses and Worms](1.2b-Viruses-and-Worms.md)
+- [1.2c - Ransomware and Crypto-malware](1.2c-Ransomware-and-Crypto-malware.md)
+- [1.2d - Trojans and RATs](1.2d-Trojans-and-RATs.md)
+- [1.2e - Rootkits](1.2e-Rootkits.md)
+- [1.2f - Spyware](1.2f-Spyware.md)
+- [1.2g - Bots and Botnets](1.2g-Bots-and-Botnets.md)
+- [1.2i - Password Attacks](1.2i-Password-Attacks.md)
+- [1.2j - Physical Attacks](1.2j-Physical-Attacks.md)
+- [1.2k - Adversarial Artificial Intelligence](1.2k-Adversarial-Artificial-Intelligence.md)
+- [1.2l - Supply Chain Attacks](1.2l-Supply-Chain-Attacks.md)
+- [1.2m - Cryptographic Attacks](1.2m-Cryptographic-Attacks.md)
