--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2l - Supply Chain Attacks.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2l - Supply Chain Attacks.md
@@ -1,26 +1,26 @@
-- Modifies core system files
-- Can be invisible to the operating systems
-- Also invisible to traditional anti-virus utilities
-- ## Kernel Drivers
-	- Zeus/Zbot malware
-	- Necurs rootkit
-	- Unable to remove the rootkit/associated software with traditional methods
-- ## Finding and removing rootkits
-	- Look for the unusual
-	- Anti-malware scans
-	- Use a remover specific to the root kit
-	- Secure boot with UEFI
+- ## Supply Chain
+	- The chain contains many moving parts
+	- Attackers can infect any step along the way
+		- Infect different parts of the chain without suspicion
+		- People trust their suppliers
+	- One exploit can infect the entire chain
+- ## Supply chain security
+	- Can you trust your new server/router/switch/firewall/software?
+	- Use a small supplier base, tighter control of vendors
+	- Strict controls over policies and procedures
+	- Security should be part of the overall design
+		- There's a limit to trust
 
 # Related Topics
 - [1.2a - Overview of Malware](1.2a-Overview-of-Malware.md)
 - [1.2b - Viruses and Worms](1.2b-Viruses-and-Worms.md)
 - [1.2c - Ransomware and Crypto-malware](1.2c-Ransomware-and-Crypto-malware.md)
 - [1.2d - Trojans and RATs](1.2d-Trojans-and-RATs.md)
+- [1.2e - Rootkits](1.2e-Rootkits.md)
 - [1.2f - Spyware](1.2f-Spyware.md)
 - [1.2g - Bots and Botnets](1.2g-Bots-and-Botnets.md)
 - [1.2h - Logic Bombs](1.2h-Logic-Bombs.md)
 - [1.2i - Password Attacks](1.2i-Password-Attacks.md)
 - [1.2j - Physical Attacks](1.2j-Physical-Attacks.md)
 - [1.2k - Adversarial Artificial Intelligence](1.2k-Adversarial-Artificial-Intelligence.md)
-- [1.2l - Supply Chain Attacks](1.2l-Supply-Chain-Attacks.md)
 - [1.2m - Cryptographic Attacks](1.2m-Cryptographic-Attacks.md)
