--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2g - Bots and Botnets.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2g - Bots and Botnets.md
@@ -33,4 +33,5 @@
 - [1.2j - Physical Attacks](1.2j-Physical-Attacks.md)
 - [1.2k - Adversarial Artificial Intelligence](1.2k-Adversarial-Artificial-Intelligence.md)
 - [1.2l - Supply Chain Attacks](1.2l-Supply-Chain-Attacks.md)
-- [1.2m - Cryptographic Attacks](1.2m-Cryptographic-Attacks.md)
+- [1.2m - Cloud-based vs On-Premises Attacks](1.2m-Cloud-based-vs-On-Premises-Attacks.md)
+- [1.2n - Cryptographic Attacks](1.2n-Cryptographic-Attacks.md)
