--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2n - Cryptographic Attacks.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2n - Cryptographic Attacks.md
@@ -33,3 +33,4 @@
 - [1.2j - Physical Attacks](1.2j-Physical-Attacks.md)
 - [1.2k - Adversarial Artificial Intelligence](1.2k-Adversarial-Artificial-Intelligence.md)
 - [1.2l - Supply Chain Attacks](1.2l-Supply-Chain-Attacks.md)
+- [1.2m - Cloud-based vs On-Premises Attacks](1.2m-Cloud-based-vs-On-Premises-Attacks.md)
