Test using paragraph

--- a/Security+/Attacks, Threats, and Vulnerabilities/1.2m - Cloud-based vs On-Premises Attacks.md
+++ b/Security+/Attacks, Threats, and Vulnerabilities/1.2m - Cloud-based vs On-Premises Attacks.md
@@ -9,12 +9,12 @@
 		- Data-center security and infrastructure costs
 	- Attackers want your data, don't care where it is
 - ## On-premise security
-	- <span style="color:green">Customize your security posture</span>
-		- full control when everything is in-house
+	- <p><span style="color:green">Customize your security posture</span>
+		- full control when everything is in-house</p>
 	- <span style="color:green">On-site IT team can manage security better</span>
 		- the local team can ensure everything is secure
 		- <span style="color:red">A local team can be expensive and difficult to staff</span>
-	- <span style="color:green">Local team maintains uptime and availability</span>
+	- <span style="color:green">Local team maintains uptime and availability</span>git
 		- System checks can occur at any time
 		- No phone call for support
 	- <span style="color:red">Security changes can take time</span>
